LWCLearnwithFLOWOrg/force-app/main/default/objects/County__c/fields/Account_Territory__c.field-meta.xml
<CustomField>
    <fullName>Account_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Territory</label>
    <referenceTo>Account_Territory__c</referenceTo>
    <relationshipLabel>Counties</relationshipLabel>
    <relationshipName>Counties</relationshipName>
    <type>Lookup</type>
</CustomField>