LWCLearnwithFLOWOrg/force-app/main/default/objects/County__c/fields/Accounts__c.field-meta.xml
<CustomField>
    <fullName>Accounts__c</fullName>
    <description>AUTO - Calculated by TERRITORY_RollupBatch. The number of Accounts in this County.</description>
    <label>Accounts</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>