LWCLearnwithFLOWOrg/force-app/main/default/objects/County__c/fields/BDR_Owner__c.field-meta.xml
<CustomField>
    <fullName>BDR_Owner__c</fullName>
    <formula>Account_Territory__r.Business_Development_Rep__r.Username</formula>
    <label>BDR Owner</label>
    <type>Text</type>
</CustomField>