LWCLearnwithFLOWOrg/force-app/main/default/objects/County__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; + State__r.Country__c, State__r.Country__r.Name, &quot;_blank&quot;)</formula>
    <label>Country</label>
    <type>Text</type>
</CustomField>