LWCLearnwithFLOWOrg/force-app/main/default/objects/County__c/fields/Number_of_Cities__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Cities__c</fullName>
    <label>Number of Cities</label>
    <summaryForeignKey>City__c.County__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>