LWCLearnwithFLOWOrg/force-app/main/default/objects/County__c/fields/Prospects__c.field-meta.xml
<CustomField>
    <fullName>Prospects__c</fullName>
    <description>AUTO - Calculated by TERRITORY_RollupBatch. The number of Prospects in this County.</description>
    <label>Prospects</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>