LWCLearnwithFLOWOrg/force-app/main/default/objects/County__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <referenceTo>State__c</referenceTo>
    <relationshipLabel>Counties</relationshipLabel>
    <relationshipName>Counties</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>