LWCLearnwithFLOWOrg/force-app/main/default/objects/County__c/validationRules/Prevent_Delete_City.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Delete_City</fullName>
    <active>true</active>
    <description>Prevents deletion of cities.</description>
    <errorConditionFormula>Number_of_Cities__c &lt;  PRIORVALUE(Number_of_Cities__c)</errorConditionFormula>
    <errorMessage>Deletion of cities is not allowed.</errorMessage>
</ValidationRule>