LWCLearnwithFLOWOrg/force-app/main/default/objects/County__c/listViews/California_Counties.listView-meta.xml
<ListView>
    <fullName>California_Counties</fullName>
    <columns>NAME</columns>
    <columns>Account_Territory__c</columns>
    <columns>State__c</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Santa Clara</value>
    </filters>
    <label>California Counties</label>
</ListView>