LWCLearnwithFLOWOrg/force-app/main/default/objects/County__c/listViews/counties_nyc.listView-meta.xml
<ListView>
    <fullName>counties_nyc</fullName>
    <columns>NAME</columns>
    <columns>Account_Territory__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State__c</field>
        <operation>equals</operation>
        <value>new york</value>
    </filters>
    <label>counties nyc</label>
</ListView>