LWCLearnwithFLOWOrg/force-app/main/default/objects/County__c/listViews/Florida_Counties.listView-meta.xml
<ListView>
    <fullName>Florida_Counties</fullName>
    <columns>NAME</columns>
    <columns>Account_Territory__c</columns>
    <columns>State__c</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State__c</field>
        <operation>equals</operation>
        <value>Florida</value>
    </filters>
    <label>Florida Counties</label>
</ListView>