LWCLearnwithFLOWOrg/force-app/main/default/objects/County__c/listViews/New_York_Counties.listView-meta.xml
<ListView>
    <fullName>New_York_Counties</fullName>
    <columns>NAME</columns>
    <columns>Account_Territory__c</columns>
    <columns>State__c</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State__c</field>
        <operation>equals</operation>
        <value>new york</value>
    </filters>
    <label>New York Counties</label>
</ListView>